@@ -1,3 +1,8 @@
+2003-05-19  Ross Burton  <ross@burtonini.com>
+
+	* gconf/gconftool.c: Implement uninstalling GConf schemas, closing
+	#104487. Patch based on work by jmmv@hispabsd.org <Julio Merino>.
+
 2003-05-19  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>
 
 	* configure.in: Add cy (Welsh) to ALL_LINGUAS
